5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1602_842.log
== TEST (2019-03-21 11:08:28) 
-- CODE:
i=int(input())
a=i
n1=a//1000
a = a%1000
n2 = a // 100
a = a%1000
n3 = // 10
a = a%1000
n4 = //1
soma= soma + i/1

print(n1,n2,n3,n4)
-- ERROR:
File "XXXX", line 7
    n3 = // 10
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:08:49) 
-- CODE:
i=int(input())
a=i
n1=a//1000
a = a%1000
n2 = a // 100
a = a%1000
n3 = a// 10
a = a%1000
n4 = //1
soma= soma + i/1

print(n1,n2,n3,n4)
-- ERROR:
File "XXXX", line 9
    n4 = //1
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:09:00) 
-- CODE:
i=int(input())
a=i
n1=a//1000
a = a%1000
n2 = a // 100
a = a%1000
n3 = a// 10
a = a%1000
n4 = a//1
soma= soma + i/1

print(n1,n2,n3,n4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma= soma + i/1
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:09:20) 
-- CODE:
i=int(input())
a=i
n1=a//1000
a = a%1000
n2 = a // 100
a = a%1000
n3 = a// 10
a = a%1000
n4 = a//1

print(n1,n2,n3,n4)
-- OUTPUT:
9 1 17 173
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:11:49) 
-- CODE:
i=int(input())
a=i
n1=a//1000
a = a%1000
n2 = a // 100
a = a%100
n3 = a// 10
a = a%10
n4 = a//1

print(n1+n2+n3+n4)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:12:13) 
-- CODE:
i=int(input())
a=i
n1=a//1000
a = a%1000
n2 = a // 100
a = a%100
n3 = a// 10
a = a%10
n4 = a//1

print(n1+n2+n3+n4)
-- EXECUTION TIME:
0.218832
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
